k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paylabs
  labels:
    app.kubernetes.io/name: paylabs
